# hydromt_delft3dfm

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  genindex.html  index.html  pyproject.toml  search.html  searchindex.js  versions.json
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation_improvement.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  linting.yml  publish.yml  sphinx-docs.yml  test-hydrolibcore-main.yml  test-hydromt-main.txt  test-hydromt-main.yml  test.yml
_generated/: hydromt_delft3dfm.DFlowFMModel.build.html  hydromt_delft3dfm.DFlowFMModel.config.html  hydromt_delft3dfm.DFlowFMModel.forcing.html  hydromt_delft3dfm.DFlowFMModel.read.html  hydromt_delft3dfm.DFlowFMModel.read_config.html  hydromt_delft3dfm.DFlowFMModel.read_staticgeoms.html  hydromt_delft3dfm.DFlowFMModel.read_staticmaps.html  hydromt_delft3dfm.DFlowFMModel.region.html  hydromt_delft3dfm.DFlowFMModel.res.html  hydromt_delft3dfm.DFlowFMModel.results.html  hydromt_delft3dfm.DFlowFMModel.root.html  hydromt_delft3dfm.DFlowFMModel.set_root.html  hydromt_delft3dfm.DFlowFMModel.set_states.html  hydromt_delft3dfm.DFlowFMModel.set_staticgeoms.html  hydromt_delft3dfm.DFlowFMModel.staticmaps.html  hydromt_delft3dfm.DFlowFMModel.update.html  hydromt_delft3dfm.DFlowFMModel.write_config.html  hydromt_delft3dfm.DFlowFMModel.write_staticgeoms.html
_modules/: index.html
_modules/hydromt_delft3dfm/: utils.html
dev/: api.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
dev/_examples/: README.html  build_1d2dmodel.html  build_1dmodel.html  build_2dmodel.html  hydromt_tutorial.html  plot_dflowfm_mesh.html  update_refine_2dgrid.html
dev/_generated/: hydromt_delft3dfm.DFlowFMModel._model_has_1d.html  hydromt_delft3dfm.DFlowFMModel._model_has_2d.html  hydromt_delft3dfm.DFlowFMModel.bounds.html  hydromt_delft3dfm.DFlowFMModel.branches.html  hydromt_delft3dfm.DFlowFMModel.build.html  hydromt_delft3dfm.DFlowFMModel.channels.html  hydromt_delft3dfm.DFlowFMModel.closedsystem.html  hydromt_delft3dfm.DFlowFMModel.config.html  hydromt_delft3dfm.DFlowFMModel.crs.html  hydromt_delft3dfm.DFlowFMModel.dfmmodel.html  hydromt_delft3dfm.DFlowFMModel.dimr.html  hydromt_delft3dfm.DFlowFMModel.forcing.html  hydromt_delft3dfm.DFlowFMModel.geoms.html  hydromt_delft3dfm.DFlowFMModel.get_config.html  hydromt_delft3dfm.DFlowFMModel.get_mesh.html  hydromt_delft3dfm.DFlowFMModel.get_model_time.html  hydromt_delft3dfm.DFlowFMModel.html  hydromt_delft3dfm.DFlowFMModel.init_dfmmodel.html  hydromt_delft3dfm.DFlowFMModel.maps.html  hydromt_delft3dfm.DFlowFMModel.mesh.html  hydromt_delft3dfm.DFlowFMModel.mesh_datasets.html  hydromt_delft3dfm.DFlowFMModel.mesh_gdf.html  hydromt_delft3dfm.DFlowFMModel.mesh_grids.html  hydromt_delft3dfm.DFlowFMModel.mesh_names.html  hydromt_delft3dfm.DFlowFMModel.opensystem.html  hydromt_delft3dfm.DFlowFMModel.pipes.html  hydromt_delft3dfm.DFlowFMModel.read.html  hydromt_delft3dfm.DFlowFMModel.read_config.html  hydromt_delft3dfm.DFlowFMModel.read_dimr.html  hydromt_delft3dfm.DFlowFMModel.read_forcing.html  hydromt_delft3dfm.DFlowFMModel.read_geoms.html  hydromt_delft3dfm.DFlowFMModel.read_maps.html  hydromt_delft3dfm.DFlowFMModel.read_mesh.html  hydromt_delft3dfm.DFlowFMModel.read_results.html  hydromt_delft3dfm.DFlowFMModel.read_states.html  hydromt_delft3dfm.DFlowFMModel.region.html  hydromt_delft3dfm.DFlowFMModel.res.html  hydromt_delft3dfm.DFlowFMModel.results.html  hydromt_delft3dfm.DFlowFMModel.rivers.html  hydromt_delft3dfm.DFlowFMModel.root.html  (+112 more)
dev/_modules/: index.html
dev/dev_guide/: contributors.html  dev_install.html  intro.html  release.html  roadmap.html
dev/getting_started/: example_index.html  faq.html  installation.html  intro.html
dev/user_guide/: dflowfm.html  dflowfm_build.html  dflowfm_model_setup.html  dflowfm_update.html  intro.html
docs/: Makefile  api.rst  changelog.rst  conf.py  make.bat
docs/dev_guide/: contributors.rst  dev_guide.rst  dev_install.rst  intro.rst  release.rst  roadmap.rst
docs/getting_started/: example_index.rst  faq.rst  installation.rst
docs/user_guide/: dflowfm.rst  dflowfm_build.rst  dflowfm_model_setup.rst  dflowfm_update.rst  intro.rst
envs/: hydromt-delft3dfm-min.yml  hydromt-delft3dfm-urbansewer.yml  hydromt-delft3dfm.yml
examples/: README.rst  build_1d2dmodel.ipynb  build_1dmodel.ipynb  build_2dmodel.ipynb  build_2dmodel_coastal.ipynb  build_2dmodel_coastal_meshkernel_issue.py  data_catalog_gebco.yml  dflowfm_build.ini  dflowfm_build.yml  dflowfm_build1d.yml  dflowfm_build2d.yml  dflowfm_build2d_coastal.yml  dflowfm_build_local.yml  dflowfm_build_piave.yml  dflowfm_update_mesh2d_refine.yml  hydromt_tutorial.ipynb  plot_dflowfm_mesh.ipynb  update_refine_2dgrid.ipynb
examples/data/: data_catalog_local.yaml  gebco.tif  refine.geojson
examples/dflowfm_local/: dimr_config.xml  hydromt_data.yml
examples/dflowfm_piave/: dimr_config.xml  hydromt_data.yml
getting_started/: example_index.html  faq.html  installation.html
hydromt_delft3dfm/: __init__.py  dflowfm.py  dflowfm.py.bak  gis_utils.py  graph_utils.py  mesh_utils.py  utils.py
hydromt_delft3dfm/components/: __init__.py  config.py  dimr.py  forcing.py  geoms.py  inifield.py  mdu.py  mesh.py
hydromt_delft3dfm/models/: dflowfm.py  (+3 more)
tests/: conftest.py  test_components_mdu.py  test_components_mesh.py  test_config.py  test_dflowfm.py  test_hydromt.py  test_io_utils.py  test_translate_utils.py  test_workflows_branches.py  test_workflows_crosssections.py  test_workflows_mesh.py
user_guide/: dflowfm.html  dflowfm_model_setup.html  intro.html
v0.1.0/: changelog.html  genindex.html  index.html  objects.inv  searchindex.js
v0.1.1/: api.html  changelog.html  objects.inv  search.html  searchindex.js
v0.1.2/: api.html  changelog.html  objects.inv  searchindex.js
v0.2.0/: changelog.html  objects.inv  search.html  searchindex.js
v0.3.0/: changelog.html  index.html  objects.inv  searchindex.js
v0.3.1/: api.html  changelog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
(+656 files in other folders)
