[build-system]
requires = ["flit_core >=3.4.0"]
build-backend = "flit_core.buildapi"

[project]
name = "hydromt_delft3dfm"
authors = [
    { name = "Rinske Hutten", email = "rinske.hutten@deltares.nl" },
    { name = "Xiaohan Li", email = "xiaohan.li@deltares.nl" },
    { name = "Hélène Boisgontier", email = "helene.boisgontier@deltares.nl" },
    { name = "Jelmer Veenstra", email = "jelmer.veenstra@deltares.nl" },
    { name = "Sebastian Hartgring", email = "sebastian.hartgring@deltares.nl" },
]
dependencies = [
    "hydromt>=1.3.1",
    "geopandas>=0.10, !=1.0.0", # gpd 1.0.0 has sjoin bug: https://github.com/geopandas/geopandas/issues/352
    "numpy>=2.0.0", # latest <2 version is already EOL
    "pandas>=2.0.0, <3", # TODO: remove temporary upper limit: https://github.com/Deltares/hydromt_delft3dfm/issues/229
    "xarray",
    # hydrolib-core>=1.0.0 has new Pydantic API, support for pandas 3 and support for Python 3.14
    # hydrolib-core>=1.0.1 reverts some incompatibilties introduced in v1
    "hydrolib-core>=1.0.1",
    "xugrid>=0.15.2", # consistent projected/geographic properties and crs attributes in the resulting datasets
    # meshkernel>=8.3.0 supports interpolation of arbitrary properties like bathymetry
    "meshkernel>=8.3.0",
    "pyproj",
    "shapely>=2.0.0",
    "scipy",
    "pyflwdir>=0.5.4",
    "networkx",
]
requires-python = ">=3.11"
readme = "README.rst"
classifiers = [
    # https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Hydrology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ['version', 'description']

[project.optional-dependencies]
dev = [
    "black",       # linting
    "ruff",        # linting
    "pre-commit",  # linting
    "pip>=23.1.2", # needed for recursive dependencies
    "flit>3.4",    # build
    "twine",       # build
    "wheel",       # build
]
test = [
    "pytest>=2.7.3",
    "pytest-cov",
]
docs = [
    "nbsphinx", # docs notebook examples
    "sphinx",
    "sphinx_design",
    "pydata-sphinx-theme",
    "sphinx_autosummary_accessors",
	"ipython",
	"ipykernel",
	#"pandoc", # install via conda via features
]
examples = [
    "jupyterlab",  # run examples in jupyter notebook
    "notebook",    # jupyter integration
    "cartopy",     # plot examples
    "matplotlib",  # plot examples
]

[project.urls]
Documentation = "http://deltares.github.io/hydromt_delft3dfm/latest/"
Source = "https://github.com/Deltares/hydromt_delft3dfm"

[project.entry-points."hydromt.models"]
dflowfm = "hydromt_delft3dfm.dflowfm"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
# enable pydocstyle (E), pyflake (F) and isort (I), pytest-style (PT)
select = ["E", "F", "I", "PT", "D"]
ignore = ["D211", "D213", "E741", "D105", "E712"]
exclude = ["examples", "tests", "docs"]

[tool.ruff.per-file-ignores]
"hydromt_delft3dfm/__init__.py" = ["E402", "F403"]
"hydromt_delft3dfm/workflows/__init__.py" = ["F403"]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.flit.sdist]
include = ["hydromt_delft3dfm"]
exclude = ["docs", "examples", "envs", "tests", ".github"]

[tool.pytest.ini_options]
addopts = "--durations=0"
filterwarnings = [
#	"error",
    # TODO: ignore xugrid ugrid infer xy coords UserWarning until https://github.com/Deltares/HYDROLIB-core/issues/577 is fixed
	# note the use of single quote below to denote "raw" strings in TOML
	'''ignore:No standard_name of \('projection_x_coordinate':UserWarning''',
    # TODO: ignore xugrid crs UserWarning until https://github.com/Deltares/hydromt_delft3dfm/issues/119 is fixed
	"ignore:No CRS or recognizable standard_name found for topology:UserWarning",
	]

## Pixi related entries
[tool.pixi.workspace]
channels  = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.feature.test.tasks]
test = { cmd = ["pytest", "--cov=hydromt_delft3dfm", "--cov-report=xml", "--cov-report=term"] }

[tool.pixi.feature.docs.tasks]
docs-build = { cmd = ["sphinx-build", "docs", "docs/_build"] }

# Install your code in editable mode, dependencies here are installed in all environments
# Takes the dependencies from pyproject.toml, which will be overridden in the features below.
[tool.pixi.pypi-dependencies]
hydromt_delft3dfm = { path = ".", editable = true }

# Define features for different Python versions and Hydromt versions
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.hydromt_dev.pypi-dependencies]
# Get the latest version from main
hydromt = { git = "https://github.com/Deltares/hydromt.git", branch = "main" }

[tool.pixi.feature.hydrolibcore_dev.pypi-dependencies]
# Get the latest version from main
hydrolib-core = { git = "https://github.com/Deltares/hydrolib-core.git", branch = "main" }

[tool.pixi.feature.docs.dependencies]
pandoc = "*"

# Define environments to combine features
[tool.pixi.environments]
# TODO: temporarily restricting the default py to 312 until hydrolib-core is
#  updated to v1 in https://github.com/Deltares/hydromt_delft3dfm/pull/226.
# TODO: 313/314 still failing after adding Python 3.14 support in PR #226 with
#  "The following compiled module files exist, but seem incompatible
#  with with either python 'cpython-314' or the platform 'win32'"
default = { features = ["py312", "dev", "docs", "test", "examples"] }

pypi-311 = { features = ["py311", "dev", "test"]}
pypi-312 = { features = ["py312", "dev", "test"]}
pypi-313 = { features = ["py313", "dev", "test"]}
pypi-314 = { features = ["py314", "dev", "test"]}

dev-314 = { features = ["py314", "dev", "test", "hydromt_dev"]}

hcdev-314= { features = ["py314", "dev", "test", "hydrolibcore_dev"]}
